--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,8 @@ add_executable(wdedup "${WDEDUP_SRCPATH}/main.cpp"
                       "${WDEDUP_SRCPATH}/wio.cpp"
                       "${WDEDUP_SRCPATH}/wiobase.cpp"
                       "${WDEDUP_SRCPATH}/wpflsimple.cpp"
+                      "${WDEDUP_SRCPATH}/wpflfilter.cpp"
                       "${WDEDUP_SRCPATH}/wprof.cpp"
                       "${WDEDUP_SRCPATH}/wmerge.cpp"
+                      "${WDEDUP_SRCPATH}/wfindfirst.cpp"
                       "${WDEDUP_SRCPATH}/wsortdedup.cpp")
