wdedup: add merge planner to wprof and wmerge stage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ add_executable(wdedup "${WDEDUP_SRCPATH}/main.cpp"
                       "${WDEDUP_SRCPATH}/wpflfilter.cpp"
                       "${WDEDUP_SRCPATH}/wprof.cpp"
                       "${WDEDUP_SRCPATH}/wmerge.cpp"
+                      "${WDEDUP_SRCPATH}/wmpsimple.cpp"
                       "${WDEDUP_SRCPATH}/wfindfirst.cpp"
 # (Deprecated) #      "${WDEDUP_SRCPATH}/wsortdedup.cpp"
                       "${WDEDUP_SRCPATH}/wtreededup.cpp"
